--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ioredis": "^1.15.1",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "zmq": "^2.14.0"
   }
 }
