--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "ShiningRay",
   "license": "ISC",
   "dependencies": {
+    "core-decorators": "^0.12.2",
     "ioredis": "^1.15.1",
+    "reflect-metadata": "^0.1.3",
     "shortid": "^2.2.6",
     "zmq": "^2.14.0"
   }
