--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "sourceMap": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "outDir": "built/"
+        "outDir": "built/",
+        "noLib": false
     },
     "exclude": [
         "node_modules",
