--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "tsc",
+    "test": "mocha built/test/*.js",
+    "dev": "./node_modules/.bin/concurrently 'tsc -w' 'mocha -w built/test/*.js' "
   },
   "author": "ShiningRay",
   "license": "ISC",
@@ -15,5 +17,11 @@
     "reflect-metadata": "^0.1.3",
     "shortid": "^2.2.6",
     "zmq": "^2.14.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "concurrently": "^2.0.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.4"
   }
 }
