--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "exclude": [
         "node_modules",
         "typings/browser/",
-        "typings/browser.d.ts"
+        "typings/browser.d.ts",
+        "built/"
     ]
 }
