--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
+    "@types/ioredis": "^0.0.21",
+    "@types/node": "^6.0.48",
+    "@types/shortid": "^0.0.28",
     "chai": "^3.5.0",
     "concurrently": "^2.0.0",
     "mocha": "^2.4.5",
