--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "axon": "^2.0.2",
     "bluebird": "^3.4.6",
     "core-decorators": "^0.12.2",
+    "inversify": "^3.0.0-beta.1",
     "ioredis": "^1.15.1",
     "lodash": "^4.16.6",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "^0.1.8",
     "shortid": "^2.2.6"
   },
   "devDependencies": {
