--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axon": "^2.0.2",
     "bluebird": "^3.4.6",
     "core-decorators": "^0.12.2",
+    "eval2": "^0.3.3",
     "inversify": "^3.0.0-beta.1",
     "ioredis": "^1.15.1",
     "lodash": "^4.16.6",
@@ -22,9 +23,13 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.35",
+    "@types/chai": "^3.4.34",
     "@types/ioredis": "^0.0.21",
+    "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.48",
     "@types/shortid": "^0.0.28",
+    "@types/should": "^8.1.30",
+    "@types/sinon": "^1.16.32",
     "chai": "^3.5.0",
     "concurrently": "^2.0.0",
     "mocha": "^2.4.5",
