--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@types/sinon": "^1.16.32",
     "chai": "^3.5.0",
     "concurrently": "^2.0.0",
+    "ioredis-mock": "^2.2.0",
     "mm": "^2.0.0",
     "mocha": "^2.4.5",
-    "mock": "^0.1.1",
     "rewire": "^2.5.2",
     "sinon": "^1.17.4",
     "typescript": "^2.2.0-dev.20161123"
